# opengl-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
.cache/clangd/index/: glad.c.C2709D80467C8CEA.idx  glad.h.0EAAB21E2A885C0C.idx  glfw3.h.13F932DE03E1F99D.idx  khrplatform.h.4FC3B42637468199.idx  main.cpp.5CD73EF48E0ED3B7.idx
OpenGL_Tutorial.dSYM/Contents/: Info.plist
OpenGL_Tutorial.dSYM/Contents/Resources/DWARF/: OpenGL_Tutorial
OpenGL_Tutorial.dSYM/Contents/Resources/Relocations/aarch64/: OpenGL_Tutorial.yml
include/: Shader.hpp
include/glad/: glad.h
src/: Shader.cpp  glad.c  main.cpp  shader.frag  shader.vert
trash/: main.cpp  test.cpp
